--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "ssh://git@github.com/yukikayuki/concept-ts-extend-object.git",
   "author": "yukikayuki <yukikayuki@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "typescript": "^4.0.3"
+  }
 }
