--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "repository": "ssh://git@github.com/yukikayuki/concept-ts-extend-object.git",
   "author": "yukikayuki <yukikayuki@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "fmt": "prettier --write 'src/**/*.ts'"
+  },
   "dependencies": {
+    "prettier": "^2.1.2",
     "typescript": "^4.0.3"
   }
 }
