--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
   "author": "yukikayuki <yukikayuki@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "fmt": "prettier --write 'src/**/*.ts'"
+    "fmt": "prettier --write 'src/**/*.ts'",
+    "test": "jest"
   },
   "dependencies": {
+    "@types/jest": "^26.0.14",
+    "jest": "^26.4.2",
     "prettier": "^2.1.2",
+    "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
   }
 }
